--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Wataru Hirota <wataru@whiro.me>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+luigi = "^3.0.3"
+mlflow = "^1.22.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
