--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,13 @@ luigi = "^3.0.3"
 mlflow = "^1.22.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^6.2.5"
+black = "^21.12b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+target-version = ['py36', 'py37', 'py38', 'py39']
+include = '\.pyi?$'
