--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.black]
 target-version = ['py36', 'py37', 'py38', 'py39']
 include = '\.pyi?$'
+extend-exclude = 'luigiflow/testing.py'
