--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 luigi = "^3.0.3"
 mlflow = "^1.22.0"
 isort = "^5.10.1"
+pandas = "^1.3.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
