--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ luigi = "^3.0.3"
 mlflow = "^1.22.0"
 isort = "^5.10.1"
 pandas = "^1.3.5"
+tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
