--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Wataru Hirota <wataru@whiro.me>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">3.7,<=3.11"
 luigi = "^3.0.3"
 mlflow = "^1.22.0"
 isort = "^5.10.1"
