--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ mlflow = "^1.22.0"
 isort = "^5.10.1"
 pandas = "^1.3.5"
 tqdm = "^4.62.3"
+jsonnet = "^0.18.0"
+toml = "^0.10.2"
+file = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
