--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,17 @@ description = ""
 authors = ["Wataru Hirota <wataru@whiro.me>"]
 
 [tool.poetry.dependencies]
-python = ">3.7,<=3.11"
+python = ">=3.8,<=3.11"
 luigi = "^3.0.3"
 mlflow = "^1.22.0"
-isort = "^5.10.1"
 pandas = "^1.3.5"
 tqdm = "^4.62.3"
 jsonnet = "^0.18.0"
 toml = "^0.10.2"
-file = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
+isort = "^5.10.1"
 black = "^21.12b0"
 mypy = "^0.920"
 
@@ -25,7 +24,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
-target-version = ['py36', 'py37', 'py38', 'py39']
+target-version = ['py38', 'py39']
 include = '\.pyi?$'
 extend-exclude = 'luigiflow/testing.py'
 
