--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pandas = "^1.3.5"
 tqdm = "^4.62.3"
 jsonnet = "^0.18.0"
 toml = "^0.10.2"
+registrable = "^0.0.4"
+dependency-injector = "^4.37.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
