--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Wataru Hirota <wataru@whiro.me>"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<=3.11"
+python = ">=3.8,<3.11"
 luigi = "^3.0.3"
 mlflow = "^1.22.0"
 pandas = "^1.3.5"
@@ -14,6 +14,7 @@ jsonnet = "^0.18.0"
 toml = "^0.10.2"
 registrable = "^0.0.4"
 dependency-injector = "^4.37.0"
+scipy = "^1.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
