--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ registrable = "^0.0.4"
 dependency-injector = "^4.37.0"
 scipy = "^1.8.0"
 waitress = "2.1.1"
-pydantic = "^1.9.0"
+pydantic = "1.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
