Start to implement nested config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependency-injector = "^4.37.0"
 scipy = "^1.8.0"
 waitress = "2.1.1"
 pydantic = "1.8.2"
+typing-extensions = "^4.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
