--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,21 +6,20 @@ authors = ["Wataru Hirota <wataru@whiro.me>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-luigi = "^3.0.3"
-mlflow = "^1.22.0"
-pandas = "^1.3.5"
-tqdm = "^4.62.3"
-jsonnet = "^0.18.0"
+luigi = "^3"
+mlflow = "^1"
+pandas = "^1"
+tqdm = "^4"
+jsonnet = "^0.18"
 registrable = "^0.0.4"
-waitress = "2.1.1"
-pydantic = "1.8.2"
-typing-extensions = "^4.1.1"
+pydantic = "^1"
+typing-extensions = "^4"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
-isort = "^5.10.1"
-black = "^21.12b0"
-mypy = "^0.930"
+pytest = "^7"
+isort = "^5"
+black = "22.6.0"
+mypy = "^0.971"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
