--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ requires = ["poetry-core>=1.0.0", "cython>=0.29.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
-target-version = ['py38', 'py39']
+target-version = ['py310']
 include = '\.pyi?$'
 extend-exclude = 'luigiflow/testing.py'
 
